--- a/WHManager.DesktopUI/WHManager.DesktopUI.csproj
+++ b/WHManager.DesktopUI/WHManager.DesktopUI.csproj
@@ -8,6 +8,10 @@
     <Platforms>AnyCPU;x64</Platforms>
   </PropertyGroup>
 
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
+    <OutputPath>C:\Users\Tocon\Desktop\</OutputPath>
+  </PropertyGroup>
+
   <ItemGroup>
     <PackageReference Include="LiveCharts" Version="0.9.7" />
     <PackageReference Include="LiveCharts.Wpf" Version="0.9.7" />
